Ajuste na interface dos card, e adição de cadastro cliente